--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "agora-library-server"
+name = "agora_library_server"
 version = "0.1.0"
 description = ""
 authors = [
@@ -8,11 +8,19 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13, <4.0"
 dependencies = [
-    "pydantic-settings (>=2.9.1,<3.0.0)"
+    "pydantic-settings (>=2.9.1,<3.0.0)",
+    "fastapi[standard] (>=0.115.12,<0.116.0)",
+    "pyjwt (>=2.10.1,<3.0.0)",
+    "pydantic (>=2.11.5,<3.0.0)",
+    "alembic (>=1.16.1,<2.0.0)",
+    "sqlalchemy (>=2.0.41,<3.0.0)",
+    "pwdlib[argon2] (>=0.2.1,<0.3.0)",
+    "tzdata (>=2025.2,<2026.0)",
+    "poetry-core (>=2.1.3,<3.0.0)"
 ]
 
 [tool.poetry]
-packages = [{include = "agora_library_server", from = "src"}]
+packages = [{include = "agora_library_server"}]
 
 [tool.poetry.group.dev.dependencies]
 taskipy = "^1.14.1"
